--- a/css.css
+++ b/css.css
@@ -44,7 +44,7 @@ h2 {
 
 p {
 	margin: 2%;
-	font-family: sans-serif;
+	font-family: Handlee, sans-serif;
 	color: #e5c28e;
 	word-wrap: break-word;
 }
